--- a/package.json
+++ b/package.json
@@ -1,5 +1,16 @@
 {
+  "name": "testflyteerfrontend",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": "",
   "dependencies": {
     "axios": "^1.7.2"
-  }
+  },
+  "type": "module"
 }
